# aadi-aigis-agents-poc

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
aigis_agents/: __init__.py  __main__.py  toolkit.json
aigis_agents/agent_01_vdr_inventory/: __init__.py  __main__.py  accept_proposals.py  agent.py  agent_01_domain_knowledge_primer.md  checklist_manager.py  crawler.py  create_template.py  deal_registry.py  drl_generator.py  gap_scorer.py  matcher.py  models.py  novelty_detector.py  primer.py  report_generator.py
aigis_agents/agent_02_data_store/: __init__.py  __main__.py  agent.py  consistency_checker.py  csv_ingestor.py  db_manager.py  excel_ingestor.py  file_selector.py  formula_engine.py  models.py  pdf_ingestor.py  pg_sync.py  query_engine.py  report_generator.py  semantic_classifier.py  unit_normaliser.py
aigis_agents/agent_04_finance_calculator/: __init__.py  __main__.py  agent.py  agent_04_domain_knowledge_primer.md  agent_04_finance_knowledge_bank_v1.0.md  calculator.py  deal_registry.py  financial_analyst_playbook.md  fiscal_engine.py  models.py  primer.py  report_generator.py  sensitivity.py  validator.py
aigis_agents/agent_07_well_cards/: __init__.py  __main__.py  agent.py  chart_generator.py  dca_engine.py  production_processor.py  rag_classifier.py  report_generator.py  well_card_builder.py
aigis_agents/memory/: buyer_profile.md  cross_agent_suggestions.json
aigis_agents/mesh/: __init__.py  agent_base.py  audit_layer.py  buyer_profile_manager.py  concept_graph.py  deal_context.py  domain_knowledge.py  embeddings.py  entity_extractor.py  review_memory.py  (+5 more)
checklists/: change_log.md  gold_standard_v1.0.json  gold_standard_v1.1.json  gold_standard_v1.2.json  pending_additions.json
docs/: 05-corsair-dd-agent-flow.md  README.md  SPECIFICATION.md  aigis-system-overview.html
domain_knowledge/: Upstream Oil & Gas 101 - Technical Primer for Aigis Analytics.md  board_dd_report_playbook.md  esg_analyst_playbook.md  fiscal_terms_playbook.md  golden_question_checklist.md  legal_analyst_playbook.md  technical_analyst_playbook.md  upstream_vdr_playbook.md
plan_docs/: aigis-agent-02-data-store-spec.md  aigis-agent-07-well-cards-spec.md  aigis-agent-mesh-framework.md  aigis-agent-mesh-implementation.md  aigis-agent-test-suite.md  aigis-intelligence-layer-spec.md  aigis-prompts.md  aigis-self-learning-improvements.md  aigis-test-results.md
scripts/: fix_excalidraw.py
tests/: conftest.py  helpers.py  test_agent07_charts.py  test_agent07_dca.py  test_agent07_integration.py  test_agent07_normalization.py  test_agent07_rag.py  test_agent_04_calculator.py  test_agent_04_integration.py  test_buyer_profile.py  test_concept_graph.py  test_deal_context.py  test_hidden_dk.py  test_semantic_dk.py
(+30 files in other folders)
