[project]
name = "aigis-agents"
version = "0.1.0"
description = "Architecture-agnostic AI agents for upstream O&G M&A due diligence"
requires-python = ">=3.12"
dependencies = [
    "python-docx>=1.1",
    "docxtpl>=0.18",
    "rapidfuzz>=3.9",
    "pydantic>=2.12",
    "pyyaml>=6.0",
    "langchain-openai>=1.1",
    "langchain-anthropic>=0.3",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "psycopg[binary]>=3.3",
    "rich>=13.0",
    "python-dotenv>=1.2",
    "numpy>=1.24",
]

[project.scripts]
aigis-accept-proposals = "aigis_agents.agent_01_vdr_inventory.accept_proposals:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aigis_agents"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring multiple components",
    "slow: Tests that build real Excel/PDF fixtures",
]
